# Psi

./: .gitignore  CMakeLists.txt  PROGRESS.md  README.md  psi_nano  run_overnight.sh
data/: README.md
docs/: 00-charter.md  DESIGN.md  EVAL.md  GPU_KERNELS.md  OPTIMIZATION_LOG.md  OVERNIGHT_REPORT.md  QUALITY.md  RADICAL.md  RESEARCH.md  SHOWCASE.md
eval/: tinystories_prompts.txt
models/: CAMPAIGN_DONE_20260618_044359  README.md
models/flagship_900k/: train.txt
models/mid_570k/: train.txt
models/nano_130k/: MODEL.md  eval.txt  train.txt
models/small_350k/: train.txt
models/tiny_215k/: train.txt
src/bench/: matmul_bench.cpp  psi_profile.cpp
src/step0_scalar_autograd/: main.cpp  value.hpp
src/step1_tensor_autograd/: main.cpp  tensor.hpp
src/step2_psi_nano/: bpe.hpp  bpe_test.cpp  checkpoint.hpp  data.hpp  gradcheck.cpp  main.cpp  model.hpp  model_stories.hpp  nn.hpp  stories.cpp  tokenizer.hpp
src/step3_metal/: attention_metal.mm  autograd_gpu_test.cpp  bridge_test.cpp  db_dev.mm  fused_ternary.mm  matmul_metal.mm  metal_backend.h  metal_backend.mm  mma_autotune.mm  shape_bench.mm  ternary_fp16.mm  ternary_gemm.mm
